@@ -1,3 +1,9 @@
+2011-10-04  Peter Schueller  <ps@kr.tuwien.ac.at>
+
+	* testsuite/TestOnlineModelBuilder.cpp: Using BOOST_TEST_MESSAGE instead
+	of deprecated BOOST_MESSAGE (BOOST_MESSAGE no longer exists in boost trunk).
+	* testsuite/TestEvalEndToEnd.cpp: Likewise.
+
 2011-09-13  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>
 
 	* examples/module-Even.mlp: Add different even encodings.
